feat: Add POST for component
